[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuplan-devkit"
version = "1.2.2"
description = "The official devkit of the nuPlan dataset (www.nuPlan.org)."
readme = "docs/README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

authors = [
    { name = "The nuPlan team @ Motional", email = "nuscenes@motional.com" }
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: Free for non-commercial use",
]

[project.urls]
Homepage = "https://github.com/motional/nuplan-devkit"

[project.scripts]
nuplan_cli = "nuplan.cli.nuplan_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "*test",
    "bazel-nuplan_devkit*",
    "bazel-nuplan-devkit*",
]

[tool.setuptools.package-data]
"*" = ["*.json"]

