[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nuplan-devkit"
version = "1.2.2"
description = "The official devkit of the nuPlan dataset (www.nuPlan.org)."
readme = "docs/README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

authors = [
    { name = "The nuPlan team @ Motional", email = "nuscenes@motional.com" }
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "License :: Free for non-commercial use",
]
dependencies = [
    "aioboto3>=11.0.1",
    "aiofiles>=25.1.0",
    "bokeh==2.4.3",
    "boto3==1.24.59",
    "cachetools>=5.2.0",
    "casadi>=3.7.2",
    "control==0.9.1",
    "coverage>=7.10.7",
    "docker>=7.1.0",
    "fiona>=1.10.1",
    "future==0.18.1",
    "geopandas>=0.12.1",
    "grpcio==1.43.0",
    "grpcio-tools==1.43.0",
    "guppy3==3.1.2",
    "hydra-core==1.1.0rc1",
    "hypothesis>=6.91.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "jupyterlab>=4.2.0b3",
    "matplotlib>=3.9.4",
    "mock>=5.2.0",
    "moto>=5.1.20",
    "nest-asyncio>=1.6.0",
    "numpy==1.23.4",
    "opencv-python<=4.5.1.48",
    "pandas>=2.1.0",
    "pillow>=9.2.0",
    "pre-commit>=4.3.0",
    "psutil>=7.2.2",
    "pyarrow>=9.0.0",
    "pyinstrument>=5.1.2",
    "pyogrio>=0.11.1",
    "pyquaternion>=0.9.5",
    "pytest>=8.4.2",
    "pytorch-lightning==1.3.8",
    "rasterio>=1.4.0rc1",
    "ray>=2.0.0,<=2.50.0",
    "requests>=2.28.1",
    "retry>=0.9.2",
    "rtree>=1.4.1",
    "s3fs>=0.6.0",
    "scipy>=1.13.1",
    "selenium>=4.16.0",
    "setuptools==59.5.0",
    "shapely>=2.0.0",
    "sqlalchemy==1.4.27",
    "sympy>=1.14.0",
    "testbook>=0.4.2",
    "timm>=0.6.5",
    "torch==1.9.0 ; sys_platform == 'darwin'",
    "torch==1.9.0+cu111 ; sys_platform == 'linux'",
    "torch-scatter==2.0.9 ; sys_platform == 'linux'",
    "torchmetrics==0.7.2",
    "torchvision==0.10.0+cu111",
    "tornado>=6.5.4",
    "tqdm>=4.64.0",
    "typer>=0.21.1",
    "ujson>=5.11.0",
    "urllib3>=1.26.10",
]

[project.urls]
Homepage = "https://github.com/motional/nuplan-devkit"

[project.scripts]
nuplan_cli = "nuplan.cli.nuplan_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "*test",
    "bazel-nuplan_devkit*",
    "bazel-nuplan-devkit*",
]

[tool.setuptools.package-data]
"*" = [
    "*.html",
    "*.json",
    "*.yaml",
    "*.yml"
]

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
torch = { index = "pytorch-stable" }
torch-scatter = { index = "torch-1.9-cu111" }
torchvision = { index = "pytorch-stable" }

[[tool.uv.index]]
name = "pytorch-stable"
url = "https://download.pytorch.org/whl/torch_stable.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "torch-1.9-cu111"
url = "https://data.pyg.org/whl/torch-1.9.0+cu111.html"
format = "flat"
explicit = true

